fixed alignment

--- a/src/Components/Home/linear.css
+++ b/src/Components/Home/linear.css
@@ -1,7 +1,6 @@
 .webapp-img {
     width:800px;
-    margin-left:250px;
-    margin-top:50px;
+
     margin-bottom: 50px;
 
 }
